--- a/assets/css/login/login.css
+++ b/assets/css/login/login.css
@@ -48,7 +48,7 @@ section{
 .login__content-right{
     display: grid;
     /* grid-template-rows: 30% 50% 20%; */
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: auto auto auto;
     padding: 1.6rem;
 }
 .login__right-title{
