--- a/assets/css/login/login.css
+++ b/assets/css/login/login.css
@@ -71,10 +71,10 @@ section{
     display: flex;
     flex-direction: column;
     padding: 0rem 1rem;
+    gap: .8rem;
 }
 .login__right-form label{
-    margin-bottom: .5rem;
-    font-size: var(--links-size);
+    font-size: 1.5rem;
 }
 
 .input-container{
@@ -115,9 +115,19 @@ section{
     background-color: var(--color-error);
     color: var(--text-color);
 }
+.password-error{
+    position: absolute;
+    background-color: red;
+    color: white;
+    width: 100%;
+    height: 18px;
+    bottom: -18px;
+    text-align: center;
+    font-size: 12px;
+}
 .login-input {
     box-sizing: border-box;
-    padding: .4rem 3rem .4rem 4rem; /* Ajusta el espacio para que el texto no se solape con el icono */
+    padding: .4rem .4rem .4rem 4rem; /* Ajusta el espacio para que el texto no se solape con el icono */
     width: 100%;
     height: 100%;
     outline: none;
