--- a/assets/css/login/login.css
+++ b/assets/css/login/login.css
@@ -71,16 +71,18 @@ section{
     display: flex;
     flex-direction: column;
     padding: 0rem 1rem;
-    gap: .8rem;
+    /* gap: 2rem; */
 }
 .login__right-form label{
     font-size: 1.5rem;
 }
-
+.form-container{
+    margin-bottom: 2rem;
+}
 .input-container{
     background-color: #d8d8d8;
     position: relative;
-    margin-bottom: 1rem;
+    height: 70%;
 }
 .input-icon{
     font-size: 1.8rem;
@@ -117,13 +119,13 @@ section{
 }
 .password-error{
     position: absolute;
-    background-color: red;
-    color: white;
-    width: 100%;
     height: 18px;
-    bottom: -18px;
-    text-align: center;
+    width: 100%;
+    text-align: left;
     font-size: 12px;
+    color: var(--color-error);
+    bottom: -18px;
+    opacity: .6;
 }
 .login-input {
     box-sizing: border-box;
