--- a/assets/css/login/login.css
+++ b/assets/css/login/login.css
@@ -153,6 +153,8 @@ section{
 
 .login__bottom{
     padding:0 4rem;
+    position: relative;
+    top: -10px;
 }
 .login__data-line{
     position: relative;
@@ -168,7 +170,7 @@ section{
     text-align: center;
     font-size: 15px;
     position: absolute;
-    top: -10px;
+    top: -14px;
     left: 45%;
     background-color: #ffffff;
 }
@@ -184,31 +186,38 @@ section{
 .form-btn-container{
     width: 100%;
     position: relative;
+    display: flex;
+    flex-direction: column;
 }
-.login-btn{
-    width: 100%;
+.loader {
+  width: 95%;
+  height: 4.8px;
+  display: inline-block;
+  overflow: hidden;
+  position: relative;
+  margin: 0 auto;
+  border-radius: 1.5rem;
+  opacity: .7;
+  transition: opacity 0.3s;
 }
-.circle-loader{
-    position: absolute;
-    top: 50%;
-    left: 45%;
-    transform: translate(-50%, -50%);
-    border: 2px solid #fff;
-    border-radius: 50%;
-    border-top: 2px solid #ccc;
-    width: 20px;
-    height: 20px;
-    animation: spin 1s linear infinite;
-    content: "";
-    display: inline-block;
-    margin-left: 5px;
-    opacity: 0;
-}
-.circle-loader.loader {
-    opacity: 1;
+.loader.active::after {
+  content: '';  
+  box-sizing: border-box;
+  width: 0;
+  height: 4.8px;
+  background: var(--hover-color);
+  position: absolute;
+  top: 0;
+  left: 0;
+  animation: animFw 1.5s linear infinite;
 }
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+
+@keyframes animFw {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
 }
