--- a/assets/css/basics.css
+++ b/assets/css/basics.css
@@ -214,8 +214,9 @@ ul{
     display: flex;
     flex-direction: column;
     align-items: center;
-    row-gap: 2.6rem;
+    row-gap: 2.8rem;
     height: 100%;
+    position: relative;
 }
 
 .dashboard,
@@ -243,4 +244,17 @@ body.light-theme .directory{
   }
   ::-webkit-scrollbar-thumb:hover{
     background-color: var(--color-icon-2);
+  }
+
+/* displays black background when the user clicks on a modal */
+  .overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Color negro semitransparente */
+    z-index: 250;
+    display: none; /* Inicialmente oculto */
+
   }
