--- a/assets/css/admin-tools/admin-tools-v2.css
+++ b/assets/css/admin-tools/admin-tools-v2.css
@@ -1,13 +1,22 @@
-.admin-tools{
+.section{
     width: 100%;
     height: 100%;
     max-height: 100%;
     z-index: 100;
-    overflow:auto ;
+}
+.section{
+    /* display: flex; */
+    flex-direction: column;
+    row-gap: 2.8rem;
 }
 /* Estilos para el scroll vertical */
 .admin-tools::-webkit-scrollbar {
   width: 6px;
+}
+.body_content{
+  width: 100%;
+  height: 100%;
+  overflow: auto;
 }
 
 .admin-tools::-webkit-scrollbar-track {
@@ -49,13 +58,17 @@
 .adminTools_content-data{
     min-width: 10rem;
     max-width: 30rem;
+    position: relative;
+
 }
 .adminTools_content-data-title{
-    font-size:1.6rem;
+    font-size:var(--headline-2);
     font-weight: 600;
 }
 .adminTools_content-data-description{
-    font-size: 1.4rem;
+    font-size: var(--subtitle-2);
+    z-index: 1;
+    position: relative;
 }
 /* Estilos generales para el contenedor de la tabla */
 .adminTools_content-table-container {
@@ -76,7 +89,7 @@
   width: 100%;
   border-collapse: collapse;
   border-radius: 1.2rem;
-  /* Ajustamos el tamaño de la tabla para evitar desbordamiento del scroll bar */
+  
   padding: 5px 0; /* 5px de padding arriba y abajo */
   position: relative;
 }
@@ -93,6 +106,11 @@
   top: 0;
   z-index: 1;
   color: var(--subtitles);
+}
+.adminTools_content-table-container thead th i{
+  margin-right: .8rem;
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 
 /* Estilos para las filas de la tabla */
@@ -150,7 +168,7 @@
 .user_data-email {
   margin: 0;
   color: var(--regular-text);
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-weight: 500;
 }
 .user-ext,
@@ -194,24 +212,7 @@
   color: var(--blue-icons-white);
 }
 
-/* Estilos para el scroll vertical */
-.adminTools_content-table-container::-webkit-scrollbar {
-  width: 6px;
-}
 
-.adminTools_content-table-container::-webkit-scrollbar-track {
-  background-color: #f1f1f1;
-  border-radius: 4px;
-}
-
-.adminTools_content-table-container::-webkit-scrollbar-thumb {
-  background-color: transparent;
-  border-radius: 4px;
-}
-
-.adminTools_content-table-container::-webkit-scrollbar-thumb:hover {
-  background-color: #999;
-}
 
 /* Estilos para la tabla interna */
 .adminTools_content-table-container table {
