--- a/assets/css/generals/header.css
+++ b/assets/css/generals/header.css
@@ -3,7 +3,6 @@
     width: 100%;
     height: 8.2rem;
     position: relative;
-    z-index: 200;
 }
 .header::before{
   content: "";
@@ -15,7 +14,6 @@
   bottom: 0rem;
   left: 50%;
   transform:translate(-50%, 50%) ;
-  z-index: 200;
 }
 .header_container{
     display: grid;
@@ -37,20 +35,20 @@
   align-items: flex-start;
   column-gap: 1.6rem;
 }
-.header_left-data .bx-cog,
+.header_left-data i,
 .section-title{
   font-size: 2.8rem;
   color: var(--gray-dark);
   font-weight: 500;
 }
-.header_left-data .bx-cog{
+.header_left-data i{
   font-weight: bolder;
   align-self: flex-start;
   line-height: 1.4;
 }
 
 .header_description-title{
-  font-size: 1.4rem;
+  font-size: var(--subtitle);
   font-weight: 600;
   color: var(--subtitles);
 }
