--- a/assets/css/generals/modals.css
+++ b/assets/css/generals/modals.css
@@ -8,13 +8,13 @@
     top: 0;
     right: -40%;
     opacity: 0;
-    z-index: 250;
+    z-index: 1050;
     transition: right 0.5s ease;
 }
 .modals_container{
     background-color: #fff;
     width: 100%;
-    height: 98%;
+    height: 68rem;
     padding: 2.4rem 1.6rem;
     border-top-left-radius: 2.4rem;
     border-bottom-left-radius: 2.4rem;
@@ -31,6 +31,10 @@
 .add_newuser-content {
     width: 100%;
     height: 100%;
+    display: grid;
+    grid-template-rows: 30% 70%;
+    justify-content: center;
+    align-items: center;
 }
 .content-img {
     grid-row: 1/2;
@@ -39,8 +43,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 12rem;
-    height: 12rem;
+    width: 15rem;
+    height: 15rem;
     border-radius: 50%;
     border: 2px dashed #999;
 
@@ -117,19 +121,20 @@
     height: 100%;
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(6, 1fr);
-    padding: 1rem .5rem;
-    column-gap: 1rem;
+    grid-template-rows: repeat(6, 1.2fr);
+    padding: 1.6rem 1.2rem;
+    gap: 1.8rem 1.2rem;
 }
 .form-content{
-    display: grid;
-    grid-template-rows:30% 70%;
-    margin-bottom: 2.2rem;
+    display: flex;
+    flex-direction: column;
+    height: 7rem;
 }
 .form-content label{
-    font-size: 1.2rem;
-    color: var(--text-color);
-    margin-bottom: 1rem;
+    font-size: var(--body-subtitle);
+    color: var(--titles);
+    font-weight: 500;
+    margin-bottom: .6rem;
 }
 .form-content:nth-child(1){
     grid-column: 1/3;
@@ -146,17 +151,51 @@
 }
 .input-container{
     position: relative;
-    margin-bottom: 1rem;
     height: 100%;
 }
-.input-icon-left{
-    font-size: 1.3rem;
+.login-input{
+    font-size: 1.2rem;
+    width: 100%;
+    height: 100%;
+    padding-left: 4.4rem;
+    padding-right: 3.8rem;
+    border: solid .1rem var(--border-color);
+    border-radius: .4rem;
+    outline: none;  
+}
+.login-input::placeholder{
+    color: var(--inp-placeholder-modal);
+}
+
+.input-container.active .login-input{
+    border:.1rem solid var(--border-c);
+}
+.input-container.active-error .login-input{
+    border:.1rem solid var(--border-e);
+}
+.input-icon-right{
+    font-size: 1.6rem;
     font-weight: 600;
-    width: 2rem;
-    height: 2rem;
+    width: 2.4rem;
+    height: 2.4rem;
     position: absolute;
     top: 44%;
-    left: .5rem;
+    right: 1rem;
+    transform: translateY(-40%);
+    color: var(--validation-e);
+    display: grid;
+    place-content: center;
+    box-shadow: var(--box-shadow-ligth);
+    transition: all .3s ease-in-out;
+}
+.input-icon-left{
+    font-size: 1.6rem;
+    font-weight: 600;
+    width: 2.4rem;
+    height: 2.4rem;
+    position: absolute;
+    top: 44%;
+    left: 1rem;
     transform: translateY(-40%);
     background-color: black;
     color: #ffffff;
@@ -168,87 +207,63 @@
     
 }
 .input-container.active .input-icon-left{
-    background-color: var(--validation-color);
-    color: black;
+    background-color: var(--backgroud-c);
+    color: var(--validation-c);
+    border: .1rem solid var(--border-c);
 }
 .input-container.active-error .input-icon-left{
-    background-color: var(--color-error);
-    color: white;
+    background-color: var(--backgroud-e);
+    color: var(--validation-e);
+    border: .1rem solid var(--border-e);
 }
+
+.custom-select {
+  background-color: white; 
+  color: black; 
+  border: 1px solid #ccc; 
+  border-radius: 5px; /* Borde redondeado */
+}
+
 .error-input-invalid {
-    background-color: rgb(215, 52, 52);
     width: 100%;
     height: 2rem;
     color: var(--text-color-btns);
-    padding-left: 1rem;
     padding-top: .2rem;
     position: absolute;
+    font-size: 1.2rem;
+    color: var(--validation-e);
+    opacity: .7;
 }
-.login-input{
+/* btns cnacel and save */
+.input-content{
+    grid-column: 1/3;
+    grid-row: 5/7;
     width: 100%;
     height: 100%;
-    padding-left: 3rem;
-    border: none;
-    border-radius: .4rem;
-    outline: var(--btns-color);
-    background-color: var(--background-inputs);
-    
-}
-.text_are-modale{
-    outline: none;
-    border: none;
-    padding: 1rem;
-    resize: none;
-    margin: .1rem .5rem;
-    border-radius: .8rem;
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.3rem;
-}
-.form-content.active .text_are-modale{
-    border: 1px solid var(--validation-color);
-}
-
-body.light-theme .text_are-modale{
-    background-color: var(--background-cards-light);
-}
-.input-content{
-    box-sizing: border-box;
-    margin-top: 1rem;
-    width: 100%;
-    align-self: center;
-    justify-self: end;
-    grid-column: 1/3;
-    display: grid;
-    grid-template-columns: repeat(2, 50%);
-    gap: 1rem;
+    display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
+    gap: 1.2rem;
+    margin-top: .8rem;
 }
-.input-content .cancel{
-    color: var(--text-color);
-    font-size: 1.4rem;
-    padding: .8rem 3.5rem;
-    border: solid 1px var(--reslt-color);
-    border-radius: .6rem;
-    cursor: pointer;
-    text-align: center;
+.btn-cancel{
+    color: black;
 }
-.input-content button{
-    outline: none;
-    background-color: transparent;
-    color: var(--text-color);
-    font-size: 1.4rem;
-    padding: .8rem 3.5rem;
-    border: solid 1px var(--reslt-color);
-    border-radius: .6rem;
-    cursor: pointer;
-}
-.input-content button:nth-child(2){
+.btn-save{
     color: white;
-    background-color: var(--btn-modal);
+    background-color: #3284ff;
+    width: 100%;
 }
-.input-content button:nth-child(2):hover{
-    box-shadow: var(--shadow-inputs);
+.btn-save:hover{
+    transition: all .3s ease-in-out;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.btn-save i{
+    font-size: 1.6rem;
+}
+.btn-save span{
+    font-size: 1.4rem;
+    margin-left: .8rem;
 }
 .profile_picture-error{
     position: absolute;
