--- a/assets/css/generals/modals.css
+++ b/assets/css/generals/modals.css
@@ -14,14 +14,14 @@
 .modals_container{
     background-color: #fff;
     width: 100%;
-    height: 68rem;
+    height: 100%;
     padding: 2.4rem 1.6rem;
     border-top-left-radius: 2.4rem;
     border-bottom-left-radius: 2.4rem;
     box-shadow: var(--shadown-light-1);
 }
 
-
+.add_newuser-directory,
 .add_newuser-modal{
     width: 100%;
     height: 100%;
@@ -237,7 +237,7 @@
 /* btns cnacel and save */
 .input-content{
     grid-column: 1/3;
-    grid-row: 5/7;
+    /* grid-row: 5/7; */
     width: 100%;
     height: 100%;
     display: flex;
@@ -282,160 +282,10 @@
 
 
 /* Modal admins */
-
-/* .new_user-content{
-    display: grid;
-    grid-template-rows: 1fr 2fr;
-    align-items: center;
-    justify-items: center;
-    height: 100%;
-    width: 100%;
-} */
-/* Styles for the whole section */
-/* .new_user-admins {
-    width: 100%;
-    height: 100%;
-} */
-/* Styles for the image upload section */
-/* .content-img {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: left;
+.add_newuser-directory,
+.add_newuser-modal{
+    display: none;
 }
-.content-img {
-    grid-row: 1/2;
-    justify-self: center;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 16rem;
-    height: 16rem;
-    border-radius: 50%;
-    border: 2px dashed #999;
-
-}
-
-.input-container-profile {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-}
-
-.input-content-profile {
-    text-align: center;
-    height: 100%;
-    width: 100%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.label-file {
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-.input-cont-sub {
-    width: 3rem;
-    height: 3rem;
-    position: absolute;
-    bottom: -10px;
-    right: 0px;
-    border-radius: .3rem;
-}
-
-.input-file {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    width: 80%;
-    height: 84%;
-    border: none;
-    position: absolute;
-    top: 45px;
-    left: 38px;
-    opacity: 0;
-    z-index: 200;
-}
-
-.bx-camera {
-    position: absolute;
-    bottom: 5px;
-    right: 5px;
-    font-size: 30px;
-    z-index: 1;
-    pointer-events: none;
-    color: var(--text-color);
-} */
-
-/* .uploaded-image {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    object-fit: cover;
-    border: none;
-    opacity: 0;
-}
-.new_user-form{
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(6, 1fr);
-    padding: 1rem .5rem;
-    column-gap: 1rem;
-} */
-
-/* Styles for the form */
-/* .content_form{
-    width: 100%;
-}
-.form {
-    width: 100%;
-    max-width: 400px;
-}
-
-.form__field {
-    margin-bottom: 15px;
-}
-
-.form__label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-}
-
-.form__input,
-.form__select {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-.form__button {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    color: #fff;
-    font-weight: bold;
-}
-
-.form__button--cancel {
-    background-color: #d9534f;
-}
-
-.form__button--save {
-    background-color: #5bc0de;
-} */
 
 
 
