manager section created and fixing the size of the cards

--- a/assets/css/basics.css
+++ b/assets/css/basics.css
@@ -164,7 +164,9 @@
     --headline: 3.4rem;
     --subtitle: 1.6rem;
     --headline-2: 2.0rem;
+    --headline-2-cards: 1.6rem;
     --subtitle-2: 1.4rem;
+    --subtitle-2-cards: 1.2rem;
     --table-header: 1.2rem;
     --table-row-name: 1.2rem;
     --table-row-name-email: 1rem;
