--- a/assets/css/admin-tools/admin-tools-v2.css
+++ b/assets/css/admin-tools/admin-tools-v2.css
@@ -96,7 +96,7 @@
 
 /* Estilos para el encabezado de la tabla */
 .adminTools_content-table-container thead th {
-  background-color: #f2f2f2;
+  background-color:#f1f8ff;
   text-align: left;
   padding: 10px;
   font-weight: 600;
