--- a/assets/css/basics.css
+++ b/assets/css/basics.css
@@ -10,6 +10,7 @@
   --white: #FFFFFF;
   --white-sidebar-icons: #FFFFFF;
   --white-sidebar-text: #FFFFFF;
+  --bg-card-manager: #fbfbfb;
   
   /* Main titles color */
   --gray-dark: #333333;
