--- a/assets/css/generals/search-section.css
+++ b/assets/css/generals/search-section.css
@@ -70,18 +70,25 @@
 }
 
 .filter-options {
+  width: 18rem;
+  height: 18rem;
   position: absolute;
-  top: 40px; /* Ajusta la posición según tu diseño */
+  top: 40px; 
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 6px;
   z-index: 120;
-  padding: 10px;
-  display: none; /* Ocultamos por defecto */
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); /* Agregado efecto de sombra */
+  padding: 1rem;
+  display: none; 
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
 }
+
 .filter-dropdown.active .filter-options{
-    display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  row-gap: 1rem;
 }
 
 .filter-options p {
@@ -90,34 +97,57 @@
 }
 
 .filter-options ul {
+  width: 100%;
+  height: 100%;
   list-style: none;
-  padding: 0;
-  margin: 10px 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
 
 .filter-options ul li {
   margin: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .filter-options ul li a {
-  color: #333;
+  height: 100%;
   text-decoration: none;
-  display: block;
-  padding: .5rem .4rem;
-  display: flex; /* Alineación horizontal */
-  align-items: center; /* Alineación vertical */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   border-radius: .6rem;
+  
+}
+.deparment-filter{
+  background-color: #fff7d1;
+  color: #f69300;
+}
+.position-filter{
+  background-color: #d1f7de;
+  color: #05572e;
+}
+.close-filter{
+  background-color: #ffd6d7;
+  color: #610004;
+}
+.office-filter{
+  background-color: #daeeff;
+  color: #00559f;
 }
 
 .filter-options ul li a:hover {
     transition: all .3s ease;
-    background-color: var(--backgroud-filter-label);
-    color: var(--color-filter-label);
-    /* border: .1rem solid var(--border-filter-label); */
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
    
 }
 .filter-options ul li a i {
   font-size: 18px;
-  margin-right: 10px;
+  
 }
 
